Code review in AoC19.